Caricate immagini e attributi

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 <body>
     <div class="contenitore">
         <div class="listino-prodotti">
-            <div class="prodotto">
-
+            <div class="prodotto pos-rel">
+                <img src="img/1.webp" alt="primo">
+                <div class="icona-cuore pos-abs">&#9829;</div>
+                <span class="sconto pos-abs">-50%</span>
+                <span class="attributo pos-abs">sostenibilità</span>
             </div>
             <div class="prodotto">
-
+                <img src="img/2.webp" alt="secondo">
             </div>
             <div class="prodotto">
+                <img src="img/3.webp" alt="terzo">
 
             </div>
 
