aggiunti commneti e definita la seconda serie di immagini

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <!--Contenitore del negozio-->
     <div class="contenitore">
-        <!-- contenitore delle tre immagini -->
+        <!-- contenitore delle PRIME tre immagini -->
         <div class="elenco-prodotti">
-            <!--Prodotto songolo-->
+            <!--Prodotto singolo-->
           <div class="immagine-prodotto">
               <!--Immagine-->
             <img src="img/1.webp" alt="levis-1">
@@ -20,6 +20,7 @@
             <div class="icona-cuore">&#9829;</div>
             <!--Icone sconti-->
             <span class="sconto">-50%</span>
+            <!--DETTAGLI-->
             <span class="nota">Sostenibilità</span>
             <div class="dettagli">
                 <span class="marca">Levi's</span>
@@ -27,26 +28,81 @@
                 <span class="costo">14,99 &#8364; <span class="cbarrato">29,99 &#8364;</span></span>
             </div>  
           </div> 
-          <!--Prodotto songolo-->
+          <!--Prodotto singolo-->
           <div class="immagine-prodotto">
+              <!--Immagine-->
             <img src="img/2.webp" alt="Guess-1">
+            <!--Icona cuore-->
             <div class="icona-cuore">&#9829;</div>
+            <!--Icone sconti-->
             <span class="sconto">-30%</span>
+            <!--DETTAGLI-->
             <div class="dettagli">
                 <span class="marca">Guess</span>
                 <h4>ROSES TEE</h4>
                 <span class="costo">20,99 &#8364; <span class="cbarrato">29,99 &#8364;</span></span>
             </div> 
           </div> 
-         <!--Prodotto songolo-->
+         <!--Prodotto singolo-->
           <div class="immagine-prodotto">
+              <!--Immagine-->
             <img src="img/3.webp" alt="CZF-1">
-            <span class="sconto">-30%</span>
+            <!--Icona cuore-->
             <div class="icona-cuore">&#9829;</div>
+            <!--Icone sconti-->
+            <span class="sconto">-30%</span>
+            <!--DETTAGLI-->
             <div class="dettagli">
                 <span class="marca">Come Zucchero Filato</span>
                 <h4>VOGLIA DI COLORI PASTELLO</h4>
                 <span class="costo">129,99 &#8364;</span>
+            </div> 
+          </div> 
+        </div> 
+        <!-- contenitore delle SECONDE tre immagini -->
+        <div class="elenco-prodotti">
+            <!--Prodotto singolo-->
+          <div class="immagine-prodotto">
+              <!--Immagine-->
+            <img src="img/4.webp" alt="levis-2">
+            <!--Icona cuore-->
+            <div class="icona-cuore">&#9829;</div>
+            <!--Icone sconti-->
+            <span class="sconto">-50%</span>
+            <span class="nota">Sostenibilità</span>
+            <!--DETTAGLI-->
+            <div class="dettagli">
+                <span class="marca">Levi's</span>
+                <h4>TEE UNISEX</h4>
+                <span class="costo">14,99 &#8364; <span class="cbarrato">29,99 &#8364;</span></span>
+            </div>  
+          </div> 
+          <!--Prodotto singolo-->
+          <div class="immagine-prodotto">
+              <!--Immagine-->
+            <img src="img/5.webp" alt="Maya-1">
+            <!--Icona cuore-->
+            <div class="icona-cuore">&#9829;</div>
+            <!--DETTAGLI-->
+            <div class="dettagli">
+                <span class="marca">Maya Deluxe</span>
+                <h4>STRIP BODICE</h4>
+                <span class="costo">99,99 &#8364;</span>
+            </div> 
+          </div> 
+         <!--Prodotto singolo-->
+          <div class="immagine-prodotto">
+              <!--Immagine-->
+            <img src="img/6.webp" alt="E-spirit-1">
+            <!--Icona cuore-->
+            <div class="icona-cuore">&#9829;</div>
+            <!--Icone sconti-->
+            <span class="nota-1">Sostenibilità</span>
+            <!--DETTAGLI-->
+            <div class="dettagli">
+                <span class="marca">Espirit</span>
+                <h4>MAGLIONE - BLACK</h4>
+                <span class="costo">29,99 &#8364;</span>
             </div> 
           </div> 
         </div> 
